# sys-insight

./: .gitignore  ci.sh  main.py  pyproject.toml
src/sys_insight/: cli.py  models.py  providers.py  renderer.py  sampler.py
