[project]
name = "proc-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "radon>=6.0.1",
    "ruff>=0.15.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pylint.main]
py-version = "3.12"

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring"
]
