[project]
name = "sys-insight"
version = "0.1.0"
description = "Per-process CPU/memory visualization from /proc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib",
]


[project.optional-dependencies]
dev = [
  "mypy",
  "pylint",
  "radon",
]

[project.scripts]
sys-insight = "sys_insight.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "radon>=6.0.1",
    "ruff>=0.15.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.12"

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods"
]

[tool.pylint.'TYPECHECK']
ignored-modules = ["matplotlib"]

[tool.pylint.BASIC]
good-names = ["PID"]
